--- a/css/main.css
+++ b/css/main.css
@@ -97,16 +97,36 @@ textarea {
    Author's custom styles
    ========================================================================== */
    .bogoTitle{
+    background: rgba(255,84,104,0.3); 
+    border: 2px solid rgb(255,84,104);
+    padding: 10px;
+    margin: 10px;
 
    }
    .bogoDescription{
+    background: rgba(255,84,104,0.3); 
+    border: 2px solid rgb(255,84,104);
+    padding: 10px;
+    margin: 10px;
 
    }
    .bogoGo{
-
+    background: rgba(255,84,104,0.3); 
+    border: 2px solid rgb(255,84,104);
+    padding: 10px;
+    margin: 10px;
    }
    .bogoSignature{
-       
+    background: rgba(255,84,104,0.3); 
+    border: 2px solid rgb(255,84,104);
+    padding: 10px;
+    margin: 10px;
+   }
+
+   body{
+    width: 90%;
+    margin: 0 auto;
+    background-image: -webkit-gradient(radial, 100% 100%, 10, 90% 90%, 600, from(hsl(0, 0%, 75%)), to(hsl(0, 0%, 100%)));
    }
 
 
