--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ body {
 
 .bogoTitle, .bogoDescription, .bogoGo, .bogoSignature {
   background: rgba(248, 209, 255, 0.3);
-  border: 5px solid black;
+  border: 1px solid pink;
   padding: 10px;
   margin: 10px; }
 
