--- a/scss/main.scss
+++ b/scss/main.scss
@@ -122,21 +122,10 @@ textarea {
 
    %bordering{
     background: hsla(291, 100%, 91%, 0.3);
-    border: 5px solid hsl(0, 0%, 0%);
+    border: 1px solid pink;
     padding: 10px;
     margin: 10px;
    }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
