--- a/css/main.css
+++ b/css/main.css
@@ -82,13 +82,26 @@ textarea {
 body {
   width: 90%;
   margin: 0 auto;
-  background-image: -webkit-gradient(radial, 100% 100%, 10, 90% 90%, 600, from(#bfbfbf), to(white)); }
+  background: #ffeeee;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ffeeee, #ddefbb);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ffeeee, #ddefbb);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
 .bogoTitle, .bogoDescription, .bogoGo, .bogoSignature {
   background: rgba(248, 209, 255, 0.3);
   border: 1px solid pink;
   padding: 10px;
   margin: 10px; }
+
+.centerAlign {
+  text-align: center; }
+
+.bogoSignaturePara {
+  font-family: 'Berkshire Swash', cursive;
+  font-size: 1.2vw;
+  color: rgba(60, 0, 71, 0.71); }
 
 /* ==========================================================================
    Helper classes
