--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,7 +117,10 @@ textarea {
    body{
     width: 90%;
     margin: 0 auto;
-    background-image: -webkit-gradient(radial, 100% 100%, 10, 90% 90%, 600, from(hsl(0, 0%, 75%)), to(hsl(0, 0%, 100%)));
+    background: #ffeeee; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffeeee, #ddefbb); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffeeee, #ddefbb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
    }
 
    %bordering{
@@ -125,8 +128,18 @@ textarea {
     border: 1px solid pink;
     padding: 10px;
     margin: 10px;
+    
    }
 
+   .centerAlign{
+     text-align:center;
+   }
+
+    .bogoSignaturePara{
+        font-family: 'Berkshire Swash', cursive;
+        font-size:1.2vw;
+        color:hsla(290, 100%, 14%, 0.71);
+    }
 
 
 /* ==========================================================================
