more style changes.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,13 +115,12 @@ textarea {
    }
 
    @mixin color-cycle($cycle) {
-    color:hsla($cycle*45, 68%, 68%, 0.7)
+    color:hsla($cycle*45, 68%, 68%, .78)
   }
   
   @for $letter-pos from 0 through 16{
     .BogoTitle-#{$letter-pos}
     {
-        
       font-size:10.2vw;
       display:inline-block;
       margin:0;
@@ -157,6 +156,158 @@ textarea {
         font-size:1.2vw;
         color:hsla(290, 100%, 14%, 0.71);
     }
+// As is often the case, some devices/browsers need additional code to get CSS to work
+// in the most desired way. These mixins are used to quickly drop in hacks for each element
+// Find out more here: https://github.com/IanLunn/Hover/wiki/Hacks-Explained
+// prefix declarations
+
+// DEFAULT OPTIONS
+//Gotta seperate also these library prereqs into cleaner folders or files.
+// Prefix for Hover class names
+$nameSpace: 'hvr' !default;
+
+// Durations
+$fastDuration: .1s !default;
+$mediumDuration: .3s !default;
+$slowDuration: .5s !default;
+
+// Colors
+$primaryColor: #e1e1e1 !default;
+$secondaryColor: #666 !default;
+$highlightColor: #ccc !default;
+$activeColor: #2098D1 !default;
+$shadowColor: rgba(0, 0, 0, .6) !default;
+
+// Speech bubbles options
+$tipWidth: 10px !default;  //the width of the speech bubble tip
+$tipHeight: 10px !default; //the height of the speech bubble tip
+$tipColor: $primaryColor !default;
+
+// Arrows options
+$spaceBetweenTextAndArrows: 2.2em !default;
+
+// Curl dimensions
+$curlWidth: 25px !default;
+$curlHeight: 25px !default;
+
+// Curl colors
+$revealAreaColor: white !default;    // reveal area behind the curl
+$curlLineColor: #aaa !default;       // crease line
+$curlTransitionColor: #ccc !default;	// color transitioning from crease line to final color
+$curlLastColor: white !default;		// final color of the back of the curl
+
+// Browser Prefixes - Which CSS prefixes should be used?
+$webkit: true !default;
+$moz: false !default;
+$ms: false !default;
+$o: false !default;
+
+// Compile with or without classes
+$includeClasses: true !default;
+
+@mixin prefixed($property, $value) {
+    @if $webkit == true {
+      -webkit-#{$property}: #{$value};
+    }
+  
+    @if $moz == true {
+      -moz-#{$property}: #{$value};
+    }
+  
+    @if $ms == true {
+      -ms-#{$property}: #{$value};
+    }
+  
+    @if $o == true {
+      -o-#{$property}: #{$value};
+    }
+  
+    #{$property}: #{$value};
+  }
+  
+  // prefix keyframes
+  @mixin keyframes($name) {
+    @if $webkit == true {
+      @-webkit-keyframes #{$name} {
+        @content;
+      }
+    }
+  
+    @if $moz == true {
+      @-moz-keyframes #{$name} {
+        @content;
+      }
+    }
+  
+    @if $ms == true {
+      @-ms-keyframes #{$name} {
+        @content;
+      }
+    }
+  
+    @if $o == true {
+      @-o-keyframes #{$name} {
+        @content;
+      }
+    }
+  
+    @keyframes #{$name} {
+      @content;
+    }
+  }
+  
+@mixin hardwareAccel() {
+	// Improve performance on mobile/tablet devices
+	// Perspective reduces blurryness of text in Chrome
+	@include prefixed(transform, perspective(1px) translateZ(0));
+}
+
+@mixin improveAntiAlias() {
+	// Improve aliasing on mobile/tablet devices
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+
+@mixin forceBlockLevel() {
+	// Transforms need to be block-level to work
+	display: inline-block;
+	vertical-align: middle;
+}
+
+@mixin hacks() {
+	@include forceBlockLevel();
+	@include hardwareAccel();
+	@include improveAntiAlias();
+}
+
+    /* Box Shadow Inset from hover.css library*/
+    @mixin box-shadow-inset {
+	@include hacks();
+	@include prefixed(transition-duration, $mediumDuration);
+	@include prefixed(transition-property, box-shadow);
+
+	box-shadow: inset 0 0 0 $shadowColor,
+	0 0 1px rgba(0, 0, 0, 0); /* Hack to improve aliasing on mobile/tablet devices */
+	&:hover,
+	&:focus,
+	&:active {
+		box-shadow: inset 2px 2px 2px $shadowColor,
+		0 0 1px rgba(0, 0, 0, 0); /* Hack to improve aliasing on mobile/tablet devices */
+	}
+}
+/* From hover.css library */
+.hvr-box-shadow-inset {
+    margin: .4em;
+    padding: 1em;
+    cursor: pointer;
+    background: hsl(252, 100%, 91%);
+    text-decoration: none;
+    color: hsl(0, 0%, 40%);
+    -webkit-tap-highlight-color: hsla(0, 0%, 0%, 0);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    @include box-shadow-inset;
+  }
+
 
 /* ==========================================================================
    Helper classes
