--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(229, 118, 118, 0.7); }
+  color: rgba(229, 118, 118, 0.78); }
 
 .BogoTitle-1 {
   font-size: 10.2vw;
@@ -93,7 +93,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(229, 201, 118, 0.7); }
+  color: rgba(229, 201, 118, 0.78); }
 
 .BogoTitle-2 {
   font-size: 10.2vw;
@@ -101,7 +101,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(173, 229, 118, 0.7); }
+  color: rgba(173, 229, 118, 0.78); }
 
 .BogoTitle-3 {
   font-size: 10.2vw;
@@ -109,7 +109,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(118, 229, 146, 0.7); }
+  color: rgba(118, 229, 146, 0.78); }
 
 .BogoTitle-4 {
   font-size: 10.2vw;
@@ -117,7 +117,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(118, 229, 229, 0.7); }
+  color: rgba(118, 229, 229, 0.78); }
 
 .BogoTitle-5 {
   font-size: 10.2vw;
@@ -125,7 +125,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(118, 146, 229, 0.7); }
+  color: rgba(118, 146, 229, 0.78); }
 
 .BogoTitle-6 {
   font-size: 10.2vw;
@@ -133,7 +133,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(173, 118, 229, 0.7); }
+  color: rgba(173, 118, 229, 0.78); }
 
 .BogoTitle-7 {
   font-size: 10.2vw;
@@ -141,7 +141,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(229, 118, 201, 0.7); }
+  color: rgba(229, 118, 201, 0.78); }
 
 .BogoTitle-8 {
   font-size: 10.2vw;
@@ -149,7 +149,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(229, 118, 118, 0.7); }
+  color: rgba(229, 118, 118, 0.78); }
 
 .BogoTitle-9 {
   font-size: 10.2vw;
@@ -157,7 +157,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(229, 201, 118, 0.7); }
+  color: rgba(229, 201, 118, 0.78); }
 
 .BogoTitle-10 {
   font-size: 10.2vw;
@@ -165,7 +165,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(173, 229, 118, 0.7); }
+  color: rgba(173, 229, 118, 0.78); }
 
 .BogoTitle-11 {
   font-size: 10.2vw;
@@ -173,7 +173,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(118, 229, 146, 0.7); }
+  color: rgba(118, 229, 146, 0.78); }
 
 .BogoTitle-12 {
   font-size: 10.2vw;
@@ -181,7 +181,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(118, 229, 229, 0.7); }
+  color: rgba(118, 229, 229, 0.78); }
 
 .BogoTitle-13 {
   font-size: 10.2vw;
@@ -189,7 +189,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(118, 146, 229, 0.7); }
+  color: rgba(118, 146, 229, 0.78); }
 
 .BogoTitle-14 {
   font-size: 10.2vw;
@@ -197,7 +197,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(173, 118, 229, 0.7); }
+  color: rgba(173, 118, 229, 0.78); }
 
 .BogoTitle-15 {
   font-size: 10.2vw;
@@ -205,7 +205,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(229, 118, 201, 0.7); }
+  color: rgba(229, 118, 201, 0.78); }
 
 .BogoTitle-16 {
   font-size: 10.2vw;
@@ -213,7 +213,7 @@ textarea {
   margin: 0;
   font-family: 'Baloo Thambi';
   letter-spacing: -.2rem;
-  color: rgba(229, 118, 118, 0.7); }
+  color: rgba(229, 118, 118, 0.78); }
 
 body {
   width: 90%;
@@ -238,6 +238,33 @@ body {
   font-family: 'Berkshire Swash', cursive;
   font-size: 1.2vw;
   color: rgba(60, 0, 71, 0.71); }
+
+/* Box Shadow Inset from hover.css library*/
+/* From hover.css library */
+.hvr-box-shadow-inset {
+  margin: .4em;
+  padding: 1em;
+  cursor: pointer;
+  background: #dad1ff;
+  text-decoration: none;
+  color: #666666;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.6), 0 0 1px rgba(0, 0, 0, 0);
+  /* Hack to improve aliasing on mobile/tablet devices */ }
+  .hvr-box-shadow-inset:hover, .hvr-box-shadow-inset:focus, .hvr-box-shadow-inset:active {
+    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.6), 0 0 1px rgba(0, 0, 0, 0);
+    /* Hack to improve aliasing on mobile/tablet devices */ }
 
 /* ==========================================================================
    Helper classes
