--- a/scss/main.scss
+++ b/scss/main.scss
@@ -161,7 +161,7 @@ textarea {
 
     .bogoSignaturePara{
         font-family: 'Berkshire Swash', cursive;
-        font-size:1.2vw;
+        font-size:2vw;
         color:hsla(290, 100%, 14%, 0.71);
     }
 
@@ -174,6 +174,11 @@ textarea {
      }
      .incrementedP{
         font-family: 'Monoton', cursive;
+        font-size:4vw;
+     }
+
+     .description{
+         font-size:1.8vw;
      }
 // As is often the case, some devices/browsers need additional code to get CSS to work
 // in the most desired way. These mixins are used to quickly drop in hacks for each element
