--- a/css/main.css
+++ b/css/main.css
@@ -17754,7 +17754,7 @@ body {
   font-size: 4vw; }
 
 .description {
-  font-size: 1.8vw; }
+  font-size:20px; }
 
 /* Box Shadow Inset from hover.css library*/
 /* From hover.css library */
